<resources>
    <string name="app_name">WithMe</string>
    <string name="sign_up_text"><u>회원가입</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">다음</string>
    <string name="apply">확인</string>

    <!-- Login -->
    <string name="login_text_main">전화번호와 비밀번호를 입력해주세요!</string>
    <string name="login_text_phone_number">전화번호</string>
    <string name="login_text_password">비밀번호</string>
    <string name="login_checkbox_login_history">다음부터는 자동 로그인하기</string>
    <string name="login_go">동행하기</string>
    <string name="login_text_set_password"><u>비밀번호를 정하지 않았어요</u></string>
    <string name="login_text_find_password"><u>비밀번호를 까먹었어요</u></string>

    <!-- Signup -->
    <string name="signup_text_name">이름을 입력해주세요!</string>
    <string name="signup_input_name">   이름</string>
    <string name="signup_phone_number1">사용하고 계시는</string>
    <string name="change_phone_number">변경을 원하는</string>
    <string name="signup_phone_number2">전화번호를 입력해주세요!</string>
    <string name="signup_input_phone_number">전화번호</string>
    <string name="signup_certification">문자로 온 인증번호를 입력해주세요!</string>
    <string name="signup_btn_certification">인증번호</string>
    <string name="not_receive_certification"><u>인증번호가 오지 않아요!</u></string>
    <string name="text_set_password1">좋아요!</string>
    <string name="text_set_password2">이제, 비밀번호를 정해야 해요</string>
    <string name="text_change_password">비밀번호를 바꿔볼게요!</string>
    <string name="text_set_password3">비밀번호는 외워야 하며,</string>
    <string name="text_set_password4">다른 사람에게 함부로 알려주면 안 돼요!</string>
    <string name="input_password_valid">비밀번호 확인 (재입력)</string>
    <string name="warning_password_valid">비밀번호가 서로 달라요!</string>
    <string name="withme_start">동행 시작하기</string>
    <string name="set_change_password">변경 완료</string>

    <!-- Settings -->
    <string name="setting_head_text">설정</string>
    <string name="user_name">홍길동</string>
    <string name="user_phone_number">010-0000-0000</string>
    <string name="change_number">전화번호 바꾸기</string>
    <string name="change_pw">비밀번호 바꾸기</string>
    <string name="permit_list">제어 허용 목록</string> <!-- TODO: 동행 허용 목록 > 더 직관적인 단어 필요하다고 생각 -->
    <string name="leave">동행 멈추기(탈퇴)</string>

    <!-- Option_controller -->
    <string name="companion_allowed_list">동행 허용 목록</string>
    <string name="guide_text_off">: 꺼짐</string>
    <string name="guide_text_on">: 켜짐</string>
    <string name="imp_alert_save">중요 알림 저장</string>
    <string name="opt_alarm">알람 설정</string>
    <string name="opt_light">화면 밝기 조절</string>
    <string name="opt_volume">음량 크기 조절</string>
    <string name="opt_vibe">소리 모드 전환</string>
    <string name="off">끄기</string>
    <string name="on">켜기</string>
    <string name="leave_alert">동행 멈추기(탈퇴)를 하면,\n더 이상 동행인을\n도와드릴 수 없어요!\n\n정말 멈추실 건가요?</string>
    <string name="yes_btn">네</string>
    <string name="no_btn">아니요</string>
    <string name="leave_alert_target">동행 멈추기(탈퇴)를 하면,\n더 이상 보호자에게\n도움 받을 수 없어요!\n\n정말 멈추실 건가요?</string>
    <string name="companion_list">동행인 목록</string>

    <!-- Start -->
    <string name="start_text_main">동행을 사용중이신가요?</string>"
    <string name="start_button1_text">네, 써본 적 있어요!</string>
    <string name="start_button2_text">아니요, 처음 써봐요!</string>

    <!-- Select -->
    <string name="select_text">당신은 어떤 사람인가요?</string>"

    <!-- Connect-->
    <string name="control_scan_text">동행인의 QR을 스캔하세요</string>
    <string name="target_qr_text">보호자에게 QR을 보여주세요</string>

    <!-- Control -->
    <string name="control_call">통화 버튼</string>
    <string name="control_notification">알림 버튼</string>
    <string name="control_sound">소리 버튼</string>
    <string name="control_sound_up">소리 업 버튼</string>
    <string name="control_sound_mute">음소거 버튼</string>
    <string name="control_sound_down">소리 다운 버튼</string>
    <string name="control_light_up">밝기 업 버튼</string>
    <string name="control_light_mode">밝기 버튼</string>
    <string name="control_light_down">밝기 다운 버튼</string>
    <string name="control_set_notification">알람 설정</string>
    <string name="control_set_time">시간 선택</string>
    <string name="control_default_time">AM 10:10</string>
    <string name="control_set_btn">설정</string>
    <string name="nav_guide">설명서</string>
    <string name="nav_home">처음으로</string>
    <string name="nav_setting">설정</string>
    <string name="user_name2">홍길순</string>
    <string name="sound_mode_setting">소리 모드 설정</string>
    <string name="voliume_setting">소리 크기 조절</string>
    <string name="screen_brightness_setting">화면 밝기 조절</string>
    <string name="service_name">동행</string>
    <string name="service_name_eng">With Me</string>
    <string name="current_sound">현재 음량</string>
    <string name="change_sound">바뀐 음량</string>
    <string name="current_light">현재 밝기</string>
    <string name="change_light">바뀐 밝기</string>


    <!-- Guide -->
    <string name="guide_title">설명서</string>
    <string name="label_hello_text">안녕하세요!</string>
    <string name="with_me">동행</string>
    <string name="label_ending_text">입니다.</string>
    <string name="label_yes_text">네,</string>
    <string name="label_do_text">써본 적 있어요!</string>
    <string name="label_no_text">아니요,</string>
    <string name="label_didnt_text">처음 써봐요!</string>
    <string name="info_verifying_text">동행인의 정보를 확인하세요</string>
    <string name="companion_info_text">동행인 정보</string>
    <string name="name_text">이름:</string>
    <string name="name_ex">홍길동</string>
    <string name="phone_number_text">전화번호:</string>
    <string name="phone_number_ex">010-0000-0000</string>
    <string name="no_text">아니요!</string>
    <string name="yes_text">맞아요!</string>

    <!-- Target -->
    <string name="cotrol_text">제어 기록</string>
    <string name="log_name">홍길동</string>
    <string name="control_time">12월 31일 23시 59분 28초</string>
    <string name="Profile">프로필</string>
    <string name="controller_text">보호자</string>
    <string name="controller_name">홍길동</string>
    <string name="controller_number">010-0000-0000</string>
    <string name="reject_text">제어 거절</string>
    <string name="accept_text">제어 허용</string>
    <string name="control_log_text">제어 기록</string>


</resources>