<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_signup_step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFF2">

    <TextView
        android:id="@+id/signup_text_phone_number_notification1"
        style="@style/app_one_line_text"
        android:layout_width="178dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="19dp"
        android:autoSizeMaxTextSize="24sp"
        android:gravity="top"
        android:paddingBottom="3dp"
        android:text="@string/signup_phone_number1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_text_phone_number_notification2"
        style="@style/app_one_line_text"
        android:layout_width="278dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:autoSizeMaxTextSize="24sp"
        android:gravity="top"
        android:text="@string/signup_phone_number2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_text_phone_number_notification1" />

    <EditText
        android:id="@+id/signup_edit_phone_number"
        style="@style/app_one_line_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:autoSizeMaxTextSize="22sp"
        android:autofillHints="전화번호"
        android:background="@drawable/edit_text_border"
        android:hint="@string/signup_input_phone_number"
        android:inputType="phone"
        android:paddingHorizontal="20dp"
        android:paddingStart="15dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_text_phone_number_notification2" />

    <Button
        android:id="@+id/signup_btn_send_verification_code"
        style="@style/app_one_line_text"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="125dp"
        android:autoSizeMaxTextSize="24sp"
        android:background="@drawable/rounded_button"
        android:paddingHorizontal="50dp"
        android:text="@string/apply"
        android:textSize="24sp"
        app:backgroundTint="#FF8A80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_edit_phone_number" />

    <TextView
        android:id="@+id/signup_verification_code"
        style="@style/app_one_line_text"
        android:layout_width="380dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autoSizeMaxTextSize="24sp"
        android:text="@string/signup_certification"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn_send_verification_code" />


    <EditText
        android:id="@+id/signup_edit_verification_code"
        style="@style/app_one_line_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:autoSizeMaxTextSize="22sp"
        android:autofillHints="인증번호"
        android:background="@drawable/edit_text_border"
        android:hint="@string/signup_btn_certification"
        android:inputType="number"
        android:paddingHorizontal="20dp"
        android:paddingStart="15dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_verification_code" />

    <Button
        android:id="@+id/btn_next"
        style="@style/app_one_line_text"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="125dp"
        android:autoSizeMaxTextSize="24sp"
        android:background="@drawable/rounded_button"
        android:paddingHorizontal="50dp"
        android:text="@string/next"
        android:textSize="24sp"
        app:backgroundTint="#FF8A80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_edit_verification_code" />

    <!-- TODO: 인증번호 오류 안내 문구 색 어떤지 -->
    <TextView
        android:id="@+id/signup_not_receive_verification_code"
        style="@style/app_one_line_text"
        android:layout_width="218dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:autoSizeMaxTextSize="20sp"
        android:text="@string/not_receive_certification"
        android:textColor="#FF8A80"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next" />

</androidx.constraintlayout.widget.ConstraintLayout>