<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFF2">

    <TextView
        android:id="@+id/signup_text_password_notification2"
        style="@style/app_one_line_text"
        android:layout_width="310dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="140dp"
        android:autoSizeMaxTextSize="24sp"
        android:gravity="top"
        android:paddingBottom="3dp"
        android:text="@string/text_change_password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_text_password_notification3"
        style="@style/app_one_line_text"
        android:layout_width="260dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:autoSizeMaxTextSize="24sp"
        android:gravity="top"
        android:paddingBottom="3dp"
        android:text="@string/text_set_password3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_text_password_notification2" />

    <TextView
        android:id="@+id/signup_text_password_notification4"
        style="@style/app_one_line_text"
        android:layout_width="385dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:autoSizeMaxTextSize="24sp"
        android:gravity="top"
        android:paddingBottom="10dp"
        android:text="@string/text_set_password4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_text_password_notification3" />

    <EditText
        android:id="@+id/signup_edit_password"
        style="@style/app_one_line_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="19dp"
        android:autoSizeMaxTextSize="22sp"
        android:autofillHints="비밀번호"
        android:background="@drawable/edit_text_border"
        android:hint="@string/login_text_password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingStart="15dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_text_password_notification4" />

    <EditText
        android:id="@+id/signup_edit_password_check"
        style="@style/app_one_line_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="19dp"
        android:autoSizeMaxTextSize="22sp"
        android:autofillHints="비밀번호"
        android:background="@drawable/edit_text_border"
        android:hint="@string/input_password_valid"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingStart="15dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_edit_password" />

    <TextView
        android:id="@+id/signup_text_warning"
        style="@style/app_one_line_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="19dp"
        android:autoSizeMaxTextSize="20sp"
        android:gravity="top"
        android:text="@string/warning_password_valid"
        android:textAlignment="center"
        android:textColor="#FF8A80"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_edit_password_check"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/signup_btn_next"
        style="@style/app_one_line_text"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="19dp"
        android:autoSizeMaxTextSize="20sp"
        android:background="@drawable/rounded_button"
        android:paddingHorizontal="50dp"
        android:text="@string/set_change_password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#FF8A80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_text_warning" />


</androidx.constraintlayout.widget.ConstraintLayout>